<resources>
    <string name="app_name">FakeStore</string>
    <string name="defaultTextView">TextView</string>
    <string name="defaultImageView">imageView</string>
    <string name="translate_english">Translate Turkish</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="products">All Products</string>
    <string name="exit">Exit</string>
    <string name="addFav">Add Fav</string>
    <string name="addCart">Add Cart</string>
    <string name="splashtitle">FAKE STORE</string>
    <string name="productAdded">Product Added</string>
    <string name="productsAlreadyExist">Product Already Exist</string>
    <string name="yourCart">Your Cart</string>
    <string name="isProductDelete">will be removed from the cart. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="noInternetConnection">oops no network connection!!!</string>
    <string name="cartAmount">Cart Amount: €</string>
    <string name="payButton">Pay</string>
    <string name="nightMode">Turn on night mode</string>
    <string name="normalMode">Turn off night mode</string>
    <string name="reminder">Reminding</string>
    <string name="off">Off</string>
    <string name="email">E-Mail</string>
    <string name="password">Password</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="signOut">Sign Out</string>
    <string name="forgetPassword">Did you forget your password?</string>
</resources>