<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/action_search"
        android:icon="@drawable/search_icon"
        android:title="Search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_your_cart"
        android:icon="@drawable/cart_icon"
        android:title="@string/yourCart"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_favorites"

        android:icon="@drawable/like_icon"
        android:title="Favorites" />
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_exit"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>